[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/events/contract/contract_scene.gd" type="Script" id=1]
[ext_resource path="res://icons/titles/contract.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 750.0
margin_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 750.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/CenterContainer"]
texture = ExtResource( 2 )
offset = Vector2( 375, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 750.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 247.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LContract1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 247.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Test
"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 94.0
margin_top = 334.0
margin_right = 153.0
margin_bottom = 354.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Choose"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LContract2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 247.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Test
"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_left = 94.0
margin_top = 334.0
margin_right = 153.0
margin_bottom = 354.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Choose"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 502.0
margin_right = 750.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LContract3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 248.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Test
"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_left = 94.0
margin_top = 334.0
margin_right = 153.0
margin_bottom = 354.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Choose"

[node name="bottomMargin" type="CenterContainer" parent="VBoxContainer"]
margin_top = 543.0
margin_right = 750.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="c1"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Button" to="." method="c2"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer3/Button" to="." method="c3"]
